[gd_scene format=3 uid="uid://ds8umjuw8hog5"]

[ext_resource type="Script" uid="uid://7e4udq4ay12s" path="res://UI/HUD/Sidebar/sidebar_hud.gd" id="1_sidebar"]
[ext_resource type="PackedScene" uid="uid://dfk8x4v5y2q1w" path="res://UI/HUD/Sidebar/sidebar_button.tscn" id="2_sidebar_btn"]
[ext_resource type="Theme" uid="uid://dpov18qpoqhlb" path="res://UI/Themes/daw_theme.tres" id="3_theme"]

[node name="SidebarHUD" type="Control" unique_id=2042718903]
custom_minimum_size = Vector2(320, 0)
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 320.0
grow_vertical = 2
theme = ExtResource("3_theme")
script = ExtResource("1_sidebar")

[node name="Background" type="Panel" parent="." unique_id=72761720]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"SideBarPanel"

[node name="DesignGuide" type="ReferenceRect" parent="." unique_id=1876530237]
editor_description = "Visual guide for editor only"
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
border_color = Color(0.988235, 0.415686, 0.0352941, 0.439216)
border_width = 2.0

[node name="Layout" type="VBoxContainer" parent="." unique_id=909875305]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="RelicLabelMargin" type="MarginContainer" parent="Layout" unique_id=128433836]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="Layout/RelicLabelMargin" unique_id=2033400554]
layout_mode = 2
text = "Relics"
horizontal_alignment = 1

[node name="RelicSeparator" type="MarginContainer" parent="Layout" unique_id=314413154]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="HSeparator" type="HSeparator" parent="Layout/RelicSeparator" unique_id=1595531182]
layout_mode = 2

[node name="RelicMargin" type="MarginContainer" parent="Layout" unique_id=147806880]
layout_mode = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 5

[node name="RelicContainer" type="HBoxContainer" parent="Layout/RelicMargin" unique_id=2053909547]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="Relic1" parent="Layout/RelicMargin/RelicContainer" unique_id=803097779 instance=ExtResource("2_sidebar_btn")]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
text = "R1"

[node name="Relic2" parent="Layout/RelicMargin/RelicContainer" unique_id=1382382770 instance=ExtResource("2_sidebar_btn")]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
text = "R2"

[node name="Relic3" parent="Layout/RelicMargin/RelicContainer" unique_id=1487435513 instance=ExtResource("2_sidebar_btn")]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
text = "R3"

[node name="TowerLabelMargin" type="MarginContainer" parent="Layout" unique_id=924634891]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="Layout/TowerLabelMargin" unique_id=574862757]
layout_mode = 2
text = "Towers"
horizontal_alignment = 1

[node name="TowerSeparator" type="MarginContainer" parent="Layout" unique_id=1614860997]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HSeparator" type="HSeparator" parent="Layout/TowerSeparator" unique_id=194872291]
layout_mode = 2

[node name="TowerMargin" type="MarginContainer" parent="Layout" unique_id=1046976503]
layout_mode = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_right = 18

[node name="TowerGrid" type="GridContainer" parent="Layout/TowerMargin" unique_id=1855889378]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 18
theme_override_constants/v_separation = 18
columns = 2

[node name="Tower1" parent="Layout/TowerMargin/TowerGrid" unique_id=229961523 instance=ExtResource("2_sidebar_btn")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
disabled = true

[node name="Tower2" parent="Layout/TowerMargin/TowerGrid" unique_id=2109474580 instance=ExtResource("2_sidebar_btn")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
disabled = true

[node name="Tower3" parent="Layout/TowerMargin/TowerGrid" unique_id=1238563514 instance=ExtResource("2_sidebar_btn")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
disabled = true

[node name="Tower4" parent="Layout/TowerMargin/TowerGrid" unique_id=1315053022 instance=ExtResource("2_sidebar_btn")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
disabled = true

[node name="Tower5" parent="Layout/TowerMargin/TowerGrid" unique_id=898847702 instance=ExtResource("2_sidebar_btn")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
disabled = true

[node name="Tower6" parent="Layout/TowerMargin/TowerGrid" unique_id=1394230303 instance=ExtResource("2_sidebar_btn")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
disabled = true

[node name="BuffLabelMargin" type="MarginContainer" parent="Layout" unique_id=1343397168]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="Layout/BuffLabelMargin" unique_id=1485924018]
layout_mode = 2
text = "Buffs"
horizontal_alignment = 1

[node name="BuffSeparator" type="MarginContainer" parent="Layout" unique_id=1579930519]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HSeparator" type="HSeparator" parent="Layout/BuffSeparator" unique_id=617823827]
layout_mode = 2

[node name="BuffMargin" type="MarginContainer" parent="Layout" unique_id=1808850358]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 18
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 10

[node name="BuffContainer" type="VBoxContainer" parent="Layout/BuffMargin" unique_id=1448487458]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="Buff1" parent="Layout/BuffMargin/BuffContainer" unique_id=1120250884 instance=ExtResource("2_sidebar_btn")]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
disabled = true
text = "Empty"

[node name="Buff2" parent="Layout/BuffMargin/BuffContainer" unique_id=1016582254 instance=ExtResource("2_sidebar_btn")]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
disabled = true
text = "Empty"

[node name="Buff3" parent="Layout/BuffMargin/BuffContainer" unique_id=852748825 instance=ExtResource("2_sidebar_btn")]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
disabled = true
text = "Empty"

[node name="Buff4" parent="Layout/BuffMargin/BuffContainer" unique_id=464691629 instance=ExtResource("2_sidebar_btn")]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
disabled = true
text = "Empty"

[node name="Buff5" parent="Layout/BuffMargin/BuffContainer" unique_id=591320484 instance=ExtResource("2_sidebar_btn")]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
disabled = true
text = "Empty"

[node name="Buff6" parent="Layout/BuffMargin/BuffContainer" unique_id=178423355 instance=ExtResource("2_sidebar_btn")]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
disabled = true
text = "Empty"
